public/stylesheets/pages/workspace.css
html {
  font-family: Arial, sans-serif;
  color: #373737;
  font-size: 12px;
}
body {
  background: #ccc url(/images/embed/ui/bg.jpg);
}
  body.workspace {
    position: relative;
    overflow-y: scroll;
    overflow-x: auto;
    min-width: 937px;
  }
a {
  color: inherit;
  text-decoration: none;
}
label {
  cursor: pointer;
}

#container {
  overflow: hidden;
}

#toplinks {
  display: none;
  position: absolute;
  top: 17px; right: 50px;
  line-height: 15px;
  font-size: 11px;
  color: #808080;
}
  body.workspace #toplinks {
    display: block;
  }
  #toplinks .text_link {
    color: #777;
  }
    #toplinks .text_link:hover {
      color: #000;
    }

#workspace_logo {
  display: none;
  width: 115px; height: 29px;
  position: absolute;
  right: 45px; top: 75px;
  z-index: 3;
  background: #fff url(/images/embed/ui/workspace_logo.png) no-repeat center center;
}
  body.workspace #workspace_logo {
    display: block;
  }

#topbar {
  display: block;
  border-bottom: 1px solid #aaa;
  height: 40px;
  text-shadow: 0 1px 1px #fff;
}
  body.workspace #topbar {
    display: none;
    background: transparent;
    filter: none;
    position: absolute;
    border: 0;
    width: 140px;
    right: 50px; top: 73px;
    text-shadow: none;
    z-index: 2;
  }
    body.workspace #topbar #title {
      display: none;
    }
  #cloud_edge {
    position: absolute;
    top: 6px; left: 70px;
    width: 67px; height: 30px;
    background: url(/images/embed/ui/cloud_edge.png) no-repeat;
  }
    body.workspace #cloud_edge {
      left: 0; top: 0;
      width: 140px; height: 27px;
      background: url(/images/embed/ui/logo_gray.png) no-repeat;
    }
  .logo_words {
    position: absolute;
    color: #566eaa;
    font: normal 14px Arial;
    top: 18px;
  }
    .logo_words a {
      color: #566eaa;
    }
      body.workspace .logo_words > a {
        display: none;
      }
    #wordmark {
      cursor: pointer;
      left: 15px;
    }
      body.workspace #wordmark {
        left: 0;
      }
    #title {
      left: 145px;
    }
      #title small {
        font-size: 9px;
        text-transform: uppercase;
      }
  #search_button {
    float: right;
    margin: 3px 29px 0 6px;
  }
  #search_box_wrapper {
    margin: 0 100px 30px 30px;
    cursor: text;
  }
    #search_box {
      width: 10px;
      z-index: 100;
      position: relative;
    }
    #search_box_wrapper .menu_content {
      z-index: 100;
    }
  #title_box {
    text-align: center;
    font: bold 20px Arial;
    color: #000;
    padding: 14px 30px 20px;
  }

.ui-autocomplete {
  border: 1px solid #C0C0C0;
  background-color: #F6F6F6;
  cursor: pointer;
  z-index: 10000;
  width: 120px;
}
  .ui-autocomplete .ui-menu-item a {
    display: block;
    padding: 4px 3px;
  }
  .ui-autocomplete .ui-menu-item .ui-state-hover {
    background-color: #2A61CD;
    color: white;
  }

#spinner {
  display: none;
  position: absolute;
  top: 60px; left: 340px;
  width: 16px; height: 16px;
}

body.workspace #content {
  margin: 50px 20px 20px;
  position: relative;
}

#sidebar {
  width: 310px;
  position: absolute;
  padding-top: 15px;
  top: 0; bottom: 0; left: 0;
}
  #sidebar_background {
    position: absolute;
    top: 0; left: 0; right: 2px; bottom: 0;
    border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px;
    background: #fff;
  }

.panel_container {
  margin-left: 310px;
  padding: 15px 0 15px 0;
  position: relative;
  border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px;
  background: #fff;
}

#no_results_container {
  position: absolute;
}
  #no_results {
    position: relative;
    margin: 30px 0 0 30px;
    padding: 0 0 0 75px;
    height: 77px;
    font-size: 14px;
    line-height: 90px;
    color: #333;
  }
    #no_results .icon {
      position: absolute;
      top: 10px; left: 0px;
    }

div.full_page_background {
  position: absolute;
  top: 41px; bottom: 0; left: 0; right: 0;
  background: #f1f1f1;
  background: -webkit-gradient(radial, center top, 0, 0 0, 1500, from(rgb(250,250,250)), to(rgb(200,200,200)));
  background: -moz-radial-gradient(center top, circle cover, rgb(250,250,250) 0%, rgb(200,200,200) 100%);
}
  .static_error {
    margin: 15px 15px 15px 15px;
    color: #000;
    font-size: 16px;
    line-height: 25px;
    width: 500px;
  }
    .static_error a {
      color: #282d66;
      text-decoration: underline;
    }
  #full_screen_form form {
    padding: 50px 0 0 0;
  }
    #full_screen_form h1 {
      text-align: center;
      color: #566eaa;
      font: bold 24px Arial;
      text-shadow: 0px 1px 1px #fff;
    }
    #full_screen_form .form_error,
    #full_screen_form .form_success {
      margin-top: 20px;
    }
      #full_screen_form .form_error.login_error {
        top: -15px;
      }
    #full_screen_form .line {
      width: 545px;
      margin: 30px auto;
    }
      .full_page_background label {
        display: block;
        text-align: right;
        font: bold 16px Arial;
        width: 120px;
        line-height: 14px !important;
        color: #444;
        text-shadow: 0px 1px 1px #fff;
      }
        #full_screen_form label {
          width: 170px;
        }
        .full_page_background label.label_only {
          line-height: 30px !important;
        }
        .full_page_background .example {
          font: bold italic 11px Arial;
          color: #666;
        }
          .full_page_background .example.long {
            margin-top: 10px;
            margin-left: 200px;
          }
      #full_screen_form .text_input {
        display: block;
        position: absolute;
        margin: 0 0 0 195px;
        width: 355px;
      }
        #full_screen_form .text_input.left_half {
          width: 165px;
        }
        #full_screen_form .text_input.right_half {
          width: 169px;
          margin-left: 380px;
        }
      #full_screen_form .welcome {
        color: #666;
        width: 555px;
        text-align: justify;
        position: relative;
        font: italic 11px/16px Arial;
      }
      #full_screen_form .license {
        color: #666;
        width: 355px;
        padding-left: 250px;
        text-align: justify;
        position: relative;
        font: italic 11px/16px Arial;
      }
        #full_screen_form .license > input {
          position: absolute;
          margin: -2px 0 0 -25px;
        }
        #full_screen_form .license > input[type="checkbox"] {
          position: relative;
          margin-right: 5px;
          left: 0px;
        }
        #full_screen_form .license .account_acceptance_label {
          width: auto;
          font-size: 11px;
          text-align: left;
          display: inline;
        }
      #full_screen_form .minibutton {
        float: left;
        position: relative;
        left: 195px;
        margin: 0;
      }

/*------------------------- View-mode visibility -----------------------------*/

.search_tab_content,
.publish_tab_content,
.help_tab_content {
  display: none;
}
  body.search_panel_tab .search_tab_content,
  body.publish_panel_tab .publish_tab_content,
  body.help_panel_tab .help_tab_content {
    display: block;
  }

div.active_search,
div.empty_search {
  display: none;
}
  body.active_search div.active_search,
  body.empty_search div.empty_search {
    display: block;
  }

